@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libwcl
+Description: Wearable Computer Lab Common Library
+Version: @VERSION@
+Libs: -L${libdir} -lwcl @PKGCONFIG_OTHERLIBS@
+Cflags: -I${includedir} @PKGCONFIG_OTHERINCLUDES@
